--- a/.github/workflows/mokumoku.yml
+++ b/.github/workflows/mokumoku.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8.1
+          python-version: '3.x'
       - name: create dir
         run:
           python create_meetup_dir.py
