--- a/.github/workflows/mokumoku.yml
+++ b/.github/workflows/mokumoku.yml
@@ -8,6 +8,14 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@master
+      - name: Set year
+        env:
+          TZ: 'Asia/Tokyo'
+        run: echo "YEAR=$(date +'%Y')" >> $GITHUB_ENV
+      - name: Set month
+        env:
+          TZ: 'Asia/Tokyo'
+        run: echo "MONTH=$(date +'%m')" >> $GITHUB_ENV
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -29,7 +37,7 @@ jobs:
 
             ## 日程
 
-            20YY-MM-DD (E) 20:00-22:00
+            ${{ env.YEAR }}-${{ env.MONTH }}-DD (E) 20:00-22:00
 
             ## 場所
 
@@ -40,8 +48,7 @@ jobs:
             - [x] 会場を調整する
             - [ ] connpassのページをつくる
             - [ ] connpassヘッダー絵を準備する
-          branch: add-mokumoku
-          branch-suffix: timestamp
+          branch: add-mokumoku-${{ env.YEAR }}-${{ env.MONTH }}
       - name: Check outputs
         run: |
           echo "Pull Request Number - ${{ env.PULL_REQUEST_NUMBER }}"
