--- a/.github/workflows/mokumoku.yml
+++ b/.github/workflows/mokumoku.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Get current date
         id: date
-        run: echo "::set-output name=current::$(date +'%Y%m')"
+        run: echo "::set-output name=current::$(date +'%Y-%m')"
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
